src/semantic/tests/data/negative/async-builtin-3.hsh
{
	hello > file;
	cd > "well you can't do that"
}
